# opentrons-bioart-sim

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: OTDesign_02-23-26_11-56-55.py  OTDesign_02-23-26_18-57-12.py  example.py  htgaa.py  octocat.py
notebooks/: Copia_de_HTGAA26_Opentrons_Colab.ipynb  HTGAA26_Opentrons_Colab_Rafa.ipynb
src/opentrons_bioart_sim/: __init__.py  cli.py  colors.py  mock.py  visualization.py
tests/: test_cli.py  test_colors.py  test_mock.py  test_simulation.py  test_visualization.py
